# ncnn_Android_blazeface

./: README.md
app/: build.gradle
app/src/main/jni/: CMakeLists.txt  blazeface.cpp  blazeface.h  blazefacencnn.cpp
app/src/main/res/values/: strings.xml
ncnn_Android_mediapipe_blazeface/: .project
ncnn_Android_mediapipe_blazeface/app/: .project
ncnn_Android_mediapipe_blazeface/app/src/main/: AndroidManifest.xml
ncnn_Android_mediapipe_blazeface/app/src/main/assets/: blazeface.param  face_landmark_with_attention.param  face_mesh.param  face_mesh_new.param
ncnn_Android_mediapipe_blazeface/app/src/main/java/com/tencent/blazefacencnn/: MainActivity.java
ncnn_Android_mediapipe_blazeface/app/src/main/jni/: CMakeLists.txt  blazefacencnn.cpp  face.cpp  face.h  landmark.cpp  landmark.h
ncnn_Android_mediapipe_blazeface/app/src/main/res/layout/: main.xml
ncnn_Android_mediapipe_blazeface/app/src/main/res/values/: strings.xml
ncnn_Android_paddle_blazeface/: local.properties
ncnn_Android_paddle_blazeface/app/src/main/assets/: blazeface.param
ncnn_Android_paddle_blazeface/app/src/main/java/com/tencent/blazefacencnn/: BlazeFaceNcnn.java
ncnn_Android_paddle_blazeface/app/src/main/jni/: blazeface.cpp  blazeface.h  blazefacencnn.cpp
